--- a/package.json
+++ b/package.json
@@ -96,5 +96,8 @@
     "ethers": "^5.7.2",
     "hardhat-deploy": "^0.12.1",
     "@openzeppelin/contracts": "^5.0.0"
+  },
+  "dependencies": {
+    "@mahaxyz/contracts": "^1.18.0"
   }
 }
